added custom saiku settings

--- a/calc-assembly/src/main/assembly/resources/tomcat/webapps/saiku/WEB-INF/classes/mondrian.properties
+++ b/calc-assembly/src/main/assembly/resources/tomcat/webapps/saiku/WEB-INF/classes/mondrian.properties
@@ -6,7 +6,7 @@ mondrian.result.highCardChunkSize=500
 # Allow the use of aggregates
 mondrian.rolap.aggregates.Use=true
 mondrian.rolap.aggregates.Read=true
-mondrianÂ­.Â­rolapÂ­.Â­aggregatesÂ­.Â­ChooseByVolume=false
+mondrian­.­rolap­.­aggregates­.­ChooseByVolume=false
 
 # mondrian.properties
 mondrian.result.limit=5000000
