--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-a1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
