--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.openforis.calc</groupId>
 	<artifactId>calc</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0-a1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Open Foris Calc</name>
 
