--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 		<jackson.version>2.1.0</jackson.version>
 	</properties>
 
+	<scm>
+		<connection>scm:git:git@github.com:openforis/calc.git</connection>
+		<url>scm:git:git@github.com:openforis/calc.git</url>
+		<developerConnection>scm:git:git@github.com:openforis/calc.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
 	<repositories>
 		<repository>
 			<id>openforis-releases</id>
