[maven-release-plugin] prepare release calc-1.0-a1

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,8 @@
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.openforis.calc</groupId>
 	<artifactId>calc</artifactId>
-	<version>1.0-a1-SNAPSHOT</version>
+	<version>1.0-a1</version>
 	<packaging>pom</packaging>
 	<name>Open Foris Calc</name>
 
@@ -38,7 +34,7 @@
 		<connection>scm:git:git@github.com:openforis/calc.git</connection>
 		<url>scm:git:git@github.com:openforis/calc.git</url>
 		<developerConnection>scm:git:git@github.com:openforis/calc.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>calc-1.0-a1</tag>
 	</scm>
 
 	<repositories>
