started working on external equation import

--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -122,6 +122,10 @@
 									<name>org.openforis.calc.metadata.Variable.Scale</name>
 									<expression>.*\.variable\.scale</expression>
 								</forcedType>
+								<forcedType>
+									<name>org.openforis.calc.metadata.Variable.Scale</name>
+									<expression>.*\.equation_list\.parameters</expression>
+								</forcedType>
 							</forcedTypes>
 						</database>
 						
