--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -123,7 +123,7 @@
 									<expression>.*\.variable\.scale</expression>
 								</forcedType>
 								<forcedType>
-									<name>org.openforis.calc.metadata.Variable.Scale</name>
+									<name>org.openforis.calc.engine.ParameterMap</name>
 									<expression>.*\.equation_list\.parameters</expression>
 								</forcedType>
 							</forcedTypes>
