CALC-304 Add version to UI

--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -230,6 +230,33 @@
 				</executions>
 			</plugin>
 			
+			<!-- replace version in info file -->
+			<plugin>
+				<groupId>com.google.code.maven-replacer-plugin</groupId>
+				<artifactId>maven-replacer-plugin</artifactId>
+				<version>1.4.0</version>
+				<executions>
+					<execution>
+						<!-- the replace should happen before the app is packaged -->
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>replace</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<includes>
+						<!-- replace the token in this file -->
+						<include>target/classes/org/openforis/calc/info.properties</include>
+					</includes>
+					<regex>false</regex>
+					<!-- the name of the token to replace -->
+					<token>PROJECT_VERSION</token>
+					<!-- replace it with the Maven project version -->
+					<value>${project.version}</value>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 		
 		<pluginManagement>
