bug fix in import categories. export ws implemented.

--- a/calc-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/calc-webapp/src/main/webapp/WEB-INF/web.xml
@@ -114,6 +114,10 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>*.csv</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>spring</servlet-name>
+		<url-pattern>*.zip</url-pattern>
+	</servlet-mapping>
 	
 	<!-- ====================================================== -->
 	<!-- MISCELLANEOUS -->
