--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -332,6 +332,10 @@
 			<groupId>org.openforis.commons</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.openforis.commons</groupId>
+			<artifactId>commons-versioning</artifactId>
+		</dependency>
 		
 		<!--  Spring  -->
 		<dependency>
