--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -386,6 +386,10 @@
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq-meta</artifactId>
+		</dependency>
 		
 		<!-- DDL utils -->
 		<dependency>
