--- a/pom.xml
+++ b/pom.xml
@@ -310,6 +310,11 @@
 				<version>${jooq.version}</version>
   			</dependency>
 			<dependency>
+				<groupId>org.jooq</groupId>
+				<artifactId>jooq-meta</artifactId>
+				<version>${jooq.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.postgis</groupId>
 				<artifactId>postgis-jdbc</artifactId>
 				<version>1.3.3</version>
