--- a/calc-assembly/pom.xml
+++ b/calc-assembly/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>1.0-a6-SNAPSHOT</version>
+		<version>1.0-a6</version>
 	</parent>
 	<artifactId>calc-assembly</artifactId>
 	<packaging>pom</packaging>
