--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>calc-webapp</module>
 		<module>calc-assembly</module>
 		<module>calc-jooq-code-gen</module>
+		<module>calc-installer</module>
 	</modules>
 
 	<properties>
