maven produces windows installer

--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -12,33 +12,177 @@
 	<packaging>pom</packaging>
 
 	<name>Open Foris Calc Installer</name>
-	<description>Module to create the installer for Open Foris Calc</description>
+	<description>Module to create the installers for Open Foris Calc. They are produced by running the package phase with -Passembly parameter</description>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<executable>/opt/installbuilder-9.0.1/bin/builder</executable>
-<!-- 					<executable>${installbuilder-home}/bin/builder</executable> -->
-					<arguments>
-						<argument>build</argument>
-						<argument>${basedir}/src/main/resources/openforiscalc_installbuilder.xml</argument>
-<!-- 						<argument>windows-x86;windows-x64;linux-x86;linux-x64</argument> -->
-						<argument>windows-x86</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<properties>
+		<!-- to avoid replacing relative path to images and other resources used by the installer -->
+		<installer-dir>src/main/installer</installer-dir>
+		
+		<installbuilder-file-name>openforiscalc_installbuilder.xml</installbuilder-file-name>
+		
+		<!-- installer file names -->
+		<windows-installer-file-name>openforiscalc-${project.version}-windows-installer.exe</windows-installer-file-name>
+	</properties>
+	
+	
+	
+	<profiles>
+		<profile>
+			<id>assembly</id>
+			<build>
+				<plugins>
+				
+					<!-- 1. copy installbuilder-source-file -->
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+						<version>2.6</version>
+						<executions>
+						
+							<execution>
+								<id>copy-installbuilder-source-file</id>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${installer-dir}</outputDirectory>
+									<resources>
+										<resource>
+											<directory>src/main/resources</directory>
+											<includes>
+								                <include>${installbuilder-file-name}</include>
+								            </includes>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						
+<!-- 							<execution> -->
+<!-- 								<id>copy-installers</id> -->
+<!-- 								<phase>package</phase> -->
+<!-- 								<goals> -->
+<!-- 									<goal>copy-resources</goal> -->
+<!-- 								</goals> -->
+<!-- 								<configuration> -->
+<!-- 									<outputDirectory>${project.build.directory}</outputDirectory> -->
+<!-- 									<resources> -->
+<!-- 										<resource> -->
+<!-- 											<directory>${installbuilder-home}/output</directory> -->
+<!-- 											<includes> -->
+<!-- 								                <include>openforiscalc-${project.version}-windows-installer.exe</include> -->
+<!-- 								            </includes> -->
+<!-- 										</resource> -->
+<!-- 									</resources> -->
+<!-- 								</configuration> -->
+<!-- 							</execution> -->
+						</executions>
+					</plugin>
+					
+					<!-- 2. replace calc version into the xml installbuilder source file -->
+					<plugin>
+						<groupId>com.google.code.maven-replacer-plugin</groupId>
+						<artifactId>maven-replacer-plugin</artifactId>
+						<version>1.4.0</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>replace</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<includes>
+								<include>${installer-dir}/${installbuilder-file-name}</include>
+							</includes>
+							<regex>false</regex>
+							<!-- the name of the token to replace -->
+							<token>PROJECT_VERSION</token>
+							<!-- replace it with the Maven project version -->
+							<value>${project.version}</value>
+						</configuration>
+					</plugin>
+				
+					<!-- 3. execute installbuilder to produce the installers -->
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+						
+							<execution>
+								<id>windows-installer</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${installbuilder-home}/bin/builder</executable>
+									<arguments>
+										<argument>build</argument>
+										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument>
+										<argument>windows</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							
+						</executions>
+					</plugin>
+					
+					<!--  4. move the installers into the target folder -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>run-ant-rename</id>
+								<phase>package</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<move
+											file="${installbuilder-home}/output/${windows-installer-file-name}"
+											tofile="${project.build.directory}/${windows-installer-file-name}" />
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					
+			    	<!-- 5. attach installers as artifact -->
+					<plugin>
+					    <groupId>org.codehaus.mojo</groupId>
+					    <artifactId>build-helper-maven-plugin</artifactId>
+					    <executions>
+					        <execution>
+					            <id>attach-installer-artifacts</id>
+					            <phase>package</phase>
+					            <goals>
+					                <goal>attach-artifact</goal>
+					            </goals>
+					            <configuration>
+					                <artifacts>
+					                    <artifact>
+					                        <file>${project.build.directory}/${windows-installer-file-name}</file>
+					                        <classifier>windows</classifier>
+					                        <type>exe</type>
+					                    </artifact>
+<!-- 					                    <artifact> -->
+<!-- 					                        <file>${basedir}/target/${project.artifactId}-${project.version}-unix.sh</file> -->
+<!-- 					                        <classifier>unix</classifier> -->
+<!-- 					                        <type>sh</type> -->
+<!-- 					                    </artifact> -->
+					                </artifacts>
+					            </configuration>
+					        </execution>
+					    </executions>
+					</plugin>
+				</plugins>
+			</build>		
+		</profile>
+	</profiles>
+
 
 </project>
