--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -22,6 +22,8 @@
 		
 		<!-- installer file names -->
 		<windows-installer-file-name>openforiscalc-${project.version}-windows-installer.exe</windows-installer-file-name>
+		<linux-installer-file-name>openforiscalc-${project.version}-linux-installer.run</linux-installer-file-name>
+		<osx-installer-file-name>openforiscalc-${project.version}-osx-installer.run</osx-installer-file-name>	
 	</properties>
 	
 	<profiles>
@@ -106,6 +108,22 @@
 								</configuration>
 							</execution>
 							
+<!-- 							<execution> -->
+<!-- 								<id>linux-installer</id> -->
+<!-- 								<phase>package</phase> -->
+<!-- 								<goals> -->
+<!-- 									<goal>exec</goal> -->
+<!-- 								</goals> -->
+<!-- 								<configuration> -->
+<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
+<!-- 									<arguments> -->
+<!-- 										<argument>build</argument> -->
+<!-- 										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument> -->
+<!-- 										<argument>linux</argument> -->
+<!-- 									</arguments> -->
+<!-- 								</configuration> -->
+<!-- 							</execution> -->
+							
 						</executions>
 					</plugin>
 					
@@ -124,7 +142,16 @@
 									<tasks>
 										<move
 											file="${installbuilder-home}/output/${windows-installer-file-name}"
-											tofile="${project.build.directory}/${windows-installer-file-name}" />
+											tofile="${project.build.directory}/${windows-installer-file-name}" 
+											failonerror="false" />
+<!-- 										<move -->
+<!-- 											file="${installbuilder-home}/output/${linux-installer-file-name}" -->
+<!-- 											tofile="${project.build.directory}/${linux-installer-file-name}"  -->
+<!-- 											failonerror="false" /> -->
+<!-- 										<move -->
+<!-- 											file="${installbuilder-home}/output/${osx-installer-file-name}" -->
+<!-- 											tofile="${project.build.directory}/${osx-installer-file-name}"  -->
+<!-- 											failonerror="false" /> -->
 									</tasks>
 								</configuration>
 							</execution>
@@ -150,8 +177,8 @@
 					                        <type>exe</type>
 					                    </artifact>
 <!-- 					                    <artifact> -->
-<!-- 					                        <file>${basedir}/target/${project.artifactId}-${project.version}-unix.sh</file> -->
-<!-- 					                        <classifier>unix</classifier> -->
+<!-- 					                        <file>${project.build.directory}/${linux-installer-file-name}</file> -->
+<!-- 					                        <classifier>linux</classifier> -->
 <!-- 					                        <type>sh</type> -->
 <!-- 					                    </artifact> -->
 					                </artifacts>
