--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -92,22 +92,6 @@
 						<version>1.1</version>
 						<executions>
 						
-							<execution>
-								<id>windows-installer</id>
-								<phase>package</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>${installbuilder-home}/bin/builder</executable>
-									<arguments>
-										<argument>build</argument>
-										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument>
-										<argument>windows</argument>
-									</arguments>
-								</configuration>
-							</execution>
-							
 <!-- 							<execution> -->
 <!-- 								<id>linux-installer</id> -->
 <!-- 								<phase>package</phase> -->
@@ -123,6 +107,22 @@
 <!-- 									</arguments> -->
 <!-- 								</configuration> -->
 <!-- 							</execution> -->
+							
+							<execution>
+								<id>windows-installer</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${installbuilder-home}/bin/builder</executable>
+									<arguments>
+										<argument>build</argument>
+										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument>
+										<argument>windows</argument>
+									</arguments>
+								</configuration>
+							</execution>
 							
 						</executions>
 					</plugin>
@@ -144,10 +144,10 @@
 											file="${installbuilder-home}/output/${windows-installer-file-name}"
 											tofile="${project.build.directory}/${windows-installer-file-name}" 
 											failonerror="false" />
-<!-- 										<move -->
-<!-- 											file="${installbuilder-home}/output/${linux-installer-file-name}" -->
-<!-- 											tofile="${project.build.directory}/${linux-installer-file-name}"  -->
-<!-- 											failonerror="false" /> -->
+										<move
+											file="${installbuilder-home}/output/${linux-installer-file-name}"
+											tofile="${project.build.directory}/${linux-installer-file-name}" 
+											failonerror="false" />
 <!-- 										<move -->
 <!-- 											file="${installbuilder-home}/output/${osx-installer-file-name}" -->
 <!-- 											tofile="${project.build.directory}/${osx-installer-file-name}"  -->
@@ -176,11 +176,11 @@
 					                        <classifier>windows</classifier>
 					                        <type>exe</type>
 					                    </artifact>
-<!-- 					                    <artifact> -->
-<!-- 					                        <file>${project.build.directory}/${linux-installer-file-name}</file> -->
-<!-- 					                        <classifier>linux</classifier> -->
-<!-- 					                        <type>sh</type> -->
-<!-- 					                    </artifact> -->
+					                    <artifact>
+					                        <file>${project.build.directory}/${linux-installer-file-name}</file>
+					                        <classifier>linux</classifier>
+					                        <type>run</type>
+					                    </artifact>
 					                </artifacts>
 					            </configuration>
 					        </execution>
