--- a/calc-assembly/pom.xml
+++ b/calc-assembly/pom.xml
@@ -158,6 +158,29 @@
 							<finalName>${output.finalName}</finalName>
 						</configuration>
 					</plugin>
+					
+					<!-- 4. unzip  -->
+<!-- 					<plugin> -->
+<!-- 						<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 						<artifactId>maven-antrun-plugin</artifactId> -->
+<!-- 						<executions> -->
+<!-- 							<execution> -->
+<!-- 								<id>run-ant-rename</id> -->
+<!-- 								<phase>package</phase> -->
+<!-- 								<goals> -->
+<!-- 									<goal>run</goal> -->
+<!-- 								</goals> -->
+<!-- 								<configuration> -->
+<!-- 									<tasks> -->
+<!-- 										<unzip -->
+<!-- 											src="${project.build.directory}/${output.finalName}.zip" -->
+<!-- 											dest="${project.build.directory}" -->
+<!-- 											/> -->
+<!-- 									</tasks> -->
+<!-- 								</configuration> -->
+<!-- 							</execution> -->
+<!-- 						</executions> -->
+<!-- 					</plugin> -->
 				</plugins>
 			</build>
 		</profile>
