--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -92,21 +92,21 @@
 						<version>1.1</version>
 						<executions>
 						
-<!-- 							<execution> -->
-<!-- 								<id>linux-installer</id> -->
-<!-- 								<phase>package</phase> -->
-<!-- 								<goals> -->
-<!-- 									<goal>exec</goal> -->
-<!-- 								</goals> -->
-<!-- 								<configuration> -->
-<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
-<!-- 									<arguments> -->
-<!-- 										<argument>build</argument> -->
-<!-- 										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument> -->
-<!-- 										<argument>linux</argument> -->
-<!-- 									</arguments> -->
-<!-- 								</configuration> -->
-<!-- 							</execution> -->
+							<execution>
+								<id>linux-installer</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${installbuilder-home}/bin/builder</executable>
+									<arguments>
+										<argument>build</argument>
+										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument>
+										<argument>linux</argument>
+									</arguments>
+								</configuration>
+							</execution>
 							
 							<execution>
 								<id>windows-installer</id>
