--- a/calc-assembly/pom.xml
+++ b/calc-assembly/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>1.0-a8-SNAPSHOT</version>
+		<version>1.0-a8</version>
 	</parent>
 	<artifactId>calc-assembly</artifactId>
 	<packaging>pom</packaging>
@@ -175,7 +175,7 @@
 <!-- 										<unzip -->
 <!-- 											src="${project.build.directory}/${output.finalName}.zip" -->
 <!-- 											dest="${project.build.directory}" -->
-<!-- 											/> -->
+<!-- 											 /> -->
 <!-- 									</tasks> -->
 <!-- 								</configuration> -->
 <!-- 							</execution> -->
