--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.openforis.calc</groupId>
 	<artifactId>calc</artifactId>
-	<version>1.0-a13-SNAPSHOT</version>
+	<version>1.0-a13</version>
 	<packaging>pom</packaging>
 	<name>Open Foris Calc</name>
 
