--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -53,6 +53,7 @@
 								            </includes>
 										</resource>
 									</resources>
+						            <overwrite>true</overwrite>
 								</configuration>
 							</execution>
 						
@@ -179,6 +180,7 @@
 					        </execution>
 					    </executions>
 					</plugin>
+				
 				</plugins>
 			</build>		
 		</profile>
